# cmake-project

./: .gitignore  README.md
cmake/: cmake_project.cmake  cmp_kubus.cmake  cmpi.cmake  versions_info_header.cmake
cmake/versions_info_header/: versions.h.in  versions.hpp.in
example/: CMakeLists.txt  cmake-project.json  main.cpp
example/recipes/: openssl.json
recipes/: LibXml2.json  OpenSSL.json  abseil-cpp.json  argparse.json  asio.json  backward-cpp.json  backward.json  benchmark.json  blackhole.json  brotli.json  catch2.json  cgen.json  ckdl.json  cli.json  clipp.json  cmake-modules.json  concurrentqueue.json  cosmopolitan.json  cpp-dump.json  cpp-httplib.json  cpp-peglib.json  cppitertools.json  cpr.json  crow.json  curl.json  cxxopts.json  doctest.json  drogon.json  eventpp.json  fibertaskinglib.json  fizz.json  fmt.json  fmtlog.json  fundus.json  g3log.json  gflags.json  glob.json  glog.json  googletest.json  grpc.json  (+86 more)
schema/: cmake-project.schema.json
